2/todo-application/manifests/todo-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
spec:
  type: ClusterIP
  selector:
    app: todo # This is the app as declared in the deployment.
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
